# tracksy

./: .all-contributorsrc  .gitignore  .prettierrc.mjs  .prototools  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  DEVELOPMENT.md  LICENSE  README.md  SECURITY.md  astro.config.mjs  base.prettier.mjs  eslint.config.js  index.html  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  vitest.config.ts  vitest.setupFiles.ts
.github/: CODEOWNERS  cliff-release.toml  cliff.toml  dependabot.yml  labels.yml  pull_request_template.md
.moon/: toolchain.yml  toolchains.yml  workspace.yml
_astro/: App.-1ibaobm.js  App.-zWxO82Y.js  App.0yPWs80w.js  App.1X408vwe.js  App.2N25KDzY.js  App.2sDsqcKc.js  App.39daNf3P.js  App.69wlKtSJ.js  App.7UM2WVe2.js  App.B-gaoX2y.js  App.B0vshTEC.js  App.B32Y0xNj.js  App.B4LpBbhr.js  App.B7DtVAoH.js  App.B7a2Cd9j.js  App.B8Ssy_fs.js  App.B8inMuJ3.js  App.BA3pJmT4.js  App.BA9xmtrS.js  App.BGL2JioO.js  App.BHCd8Iwx.js  App.BH_WU_IK.js  App.BJA6SM4q.js  App.BKIt_GK3.js  App.BKNhaJUS.js  App.BLGkKasR.js  App.BMOVhQjX.js  App.BPxqa-V_.js  App.BQpC4OSn.js  App.BTZuAIA2.js  App.BUHxi5Ed.js  App.BUJdxItQ.js  App.BUebTqek.js  App.BV_a-ISA.js  App.BWietme-.js  App.BXLpCtkr.js  App.BXzUUMKn.js  App.BYXQjMbS.js  App.BYeJtlMr.js  App.BYwmZBSi.js  (+285 more)
app/: .astroignore  .env.example  .gitignore  .prettierignore  .prettierrc.mjs  .sqruff  AGENTS.md  README.md  (+9 more)
synthetic-datasets/: AGENTS.md  README.md  moon.yml  pyproject.toml
synthetic-datasets-rust/: Cargo.toml
synthetic-datasets-rust/src/: factory.rs  main.rs  models.rs  writers.rs
synthetic-datasets/synthetic_datasets/: app.py  chapters.py  config.py  hello.py  inactivity.py  personas.py
synthetic-datasets/synthetic_datasets/factories/: apple_music.py  applemusic.py  base.py  custom.py  deezer.py  funkwhale.py  jellyfin.py  spotify.py
synthetic-datasets/synthetic_datasets/models/: apple_music.py  applemusic.py  base.py  custom.py  deezer.py  funkwhale.py  jellyfin.py  spotify.py
synthetic-datasets/synthetic_datasets/writers/: apple_music.py  applemusic.py  custom.py  deezer.py  funkwhale.py  jellyfin.py  spotify.py
synthetic-datasets/tests/: conftest.py  test_app.py  test_applemusic_factory.py  test_chart_classifications.py  test_config.py  test_deezer_factory.py
synthetic-datasets/tests/factories/: test_apple_music.py  test_base_factory.py  test_chapters.py  test_custom.py  test_deezer.py  test_funkwhale.py  test_gaps.py  test_inactivity.py  test_jellyfin.py  test_personas.py  test_spotify.py  test_spotify_seed.py
synthetic-datasets/tests/models/: test_base.py  test_custom.py  test_deezer.py  test_spotify.py
synthetic-datasets/tests/writers/: test_apple_music.py  test_custom.py  test_deezer.py  test_funkwhale.py  test_jellyfin.py  test_spotify.py
(+2330 files in other folders)
