[project]
name = "synthetic_datasets"
version = "0.3.0"
description = "Tracksy app test datasets"
readme = "README.md"
requires-python = ">=3.12,<3.14"
dependencies = [
    "faker==40.28.1",
    "numpy==2.5.1",
    "openpyxl==3.1.5",
    "pydantic==2.13.4",
    "typer==0.26.8",
]

[dependency-groups]
dev = [
    "pytest==9.1.1",
    "ruff==0.15.20",
    "ty==0.0.56",
]

[tool.uv]
package = true

[tool.setuptools]
py-modules = ["synthetic_datasets"]

[tool.ruff]
line-length = 120
lint.select = ["E4", "E7", "E9", "F", "I"]

[project.scripts]
generate = "synthetic_datasets.app:main"
